feat: Initial project setup with UI, backend, and updated URLs

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,10 @@
+# Node.js
+node_modules/
+npm-debug.log
+yarn-error.log
+
 # Environment variables
 .env
-
-# Node modules
-node_modules/
 
 # Logs
 logs
